src/objects/MC_Sync__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Delta_Time__c</fullName>
        <label>Delta Time</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Delta__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Delta</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Filtro_Contatti__c</fullName>
        <label>Filtro Contatti</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Filtro_Slave__c</fullName>
        <label>Filtro Slave</label>
        <type>TextArea</type>
    </fields>
    <label>MC Sync</label>
</CustomObject>